--- a/index/index.html
+++ b/index/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Login </title>
 </head>
 
 <body>
+
     <div>
-        <button>Pesquisar Experiências</button>
-        <button>Compartilhar Experiências</button>
+        <img src="../imagens/acessibilidade-login.jpg">
+        <button onclick="register()">Cadastre-se</button>
+        <button onclick="enter()">Entrar</button>
+
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
