--- a/home/home.html
+++ b/home/home.html
@@ -10,9 +10,10 @@
 
 <body>
     <div>
-        <button>Pesquisar Experiências</button>
-        <button>Compartilhar Experiências</button>
+        <button onclick="pesquisarExperiencia()" >Pesquisar Experiências</button>
+        <button onclick="compartilharExperiencia()">Compartilhar Experiências</button>
     </div>
+    <script src="home.js"></script>
 </body>
 
 </html>
