--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -12,6 +12,8 @@
     <div id="cadastro1">
         <h2>Cadastro</h2>
         <input type="text" placeholder="Nome" name="nome">
+        <input type="text" placeholder="Login" name="login">
+        <input type="text" placeholder="Senha" name="senha">
         <input type="text" placeholder="idade" name="idade">
         <input type="text" placeholder="portador" name="portador">
         <input type="text" placeholder="Acompanho Portador" name="acompanhoPortador">
@@ -36,7 +38,7 @@
     </div>
 
     <script src="cadastro.js"></script>
-
+    <script src="../repostitorio.js"></script>
 </body>
 
 </html>
